Fix for not being able to click card on iOS devices

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -324,6 +324,7 @@ html, body {
     display: inline-block;
     margin-right: 10px;
     border: 5px solid black;
+    cursor: pointer;
 }
 
 .card:first-child {
